베이직으로 변경

--- a/syncplat.html
+++ b/syncplat.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>싱크딥에 방문중이십니다.</title>
+        <title>베이직에 방문중이십니다.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
@@ -155,7 +155,7 @@
 
         <!-- Start Footer -->
         <footer id="footer" class="footer style-1 dark">
-            <strong>©SyncDeep 2021</strong>
+            <strong>©베이직인터내셔널 2021</strong>
             <p>살아 있는 소프트웨어를 만듭니다.</p>
 
             <!-- Back To Top Button -->
