--- a/recurit.html
+++ b/recurit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>싱크딥에 방문중이십니다.</title>
+    <title>베이직에 방문중이십니다.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="img/assets/favicon.png" rel="icon" type="image/png">
     <link href="css/init.css" rel="stylesheet" type="text/css">
@@ -70,13 +70,13 @@
             </div>
 
             <div class="col-md-10 mr-auto">
-                    <p><strong>싱크딥 채용공고</strong></p>
-                    <p>싱크딥에서 개발자를 찾습니다.</p>
+                    <p><strong>베이직 채용공고</strong></p>
+                    <p>베이직에서 개발자를 찾습니다.</p>
                     <p>웹 및 프런트 엔드 개발자</p>
                     <p>상시 채용</p>
                     <p><br></p>
-                    <p><strong>싱크딥 소개</strong></p>
-                    <p>싱크딥은 마이크로서비스와 클라우드라는 세계적인 트렌드가 단순한 구호에 그치지 않고 수많은 가치를 창출할 수 있다고 믿고 있는 사람들이 모여 있는 회사입니다.</p>
+                    <p><strong>베이직 소개</strong></p>
+                    <p>베이직은 마이크로서비스와 클라우드라는 세계적인 트렌드가 단순한 구호에 그치지 않고 수많은 가치를 창출할 수 있다고 믿고 있는 사람들이 모여 있는 회사입니다.</p>
                     <p>CMS 기반의 서비스 개발 생산성과 마이크로서비스를 기반으로한 서비스의 효율적인 변화관리, 클라우드를 기반으로 한 유연한 확장성을 고객에게 제공함으로써 고객과 우리의 가치 창출을 목표로 합니다.</p>
                     <p></p>
                     <p><strong>빠르게 성장이 예상되는 기업</strong></p>
@@ -128,7 +128,7 @@
 
 <!-- Start Footer -->
 <footer id="footer" class="footer style-1 dark">
-    <strong>©SyncDeep 2021</strong>
+    <strong>©베이직인터내셔널 2021</strong>
     <p>살아 있는 소프트웨어를 만듭니다.</p>
 
     <!-- Back To Top Button -->
