--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="title" content="베이직인터내셔널" />
         <meta name="description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다." />
         <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncPlat,생산성,개발,자바" />
+        <meta name="naver-site-verification" content="d619c27c3687c9e108733dbee1336c36b87cfbd0" />
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
         <link href="css/ion-icons.min.css" rel="stylesheet" type="text/css">
