싱크딥 링크 변경

--- a/recurit.html
+++ b/recurit.html
@@ -69,7 +69,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle">협력업체<i class="ion-ios-arrow-down"></i></a>
                         <ul class="dropdown-menu" style="left: -100px;">
-                            <li><a href="https://basicit.co.kr/">(주)베이직인터내셔널</a></li>
+                            <li><a href="https://www.eagersync.com/">(주)싱크딥</a></li>
                             <li><a href="https://unvus.com/">(주)언버스</a></li>
                         </ul>
                     </li>
