베이직 -> 베이직인터네셔널

--- a/syncplat.html
+++ b/syncplat.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>베이직에 방문중이십니다.</title>
+        <title>베이직인터네셔널에 방문중이십니다.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="title" content="베이직인터네셔널" />
