아이콘 경 변경

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:type" content="website"> 
         <meta property="og:title" content="베이직인터네셔널 홈페이지">
         <meta property="og:description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다.">
-        <meta property="og:image" content="https://www.eagersync.com/img/assets/favicon.png">
+        <meta property="og:image" content="https://basicit.co.kr/img/assets/favicon.png">
         <meta property="og:url" content="https://basicit.co.kr">
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
@@ -72,7 +72,7 @@
                             <li class="dropdown">
                                 <a class="dropdown-toggle">협력업체<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu" style="left: -100px;">
-                                    <li><a href="https://www.eagersync.com/">(주)싱크딥</a></li>
+                                    <li><a href="https://www.eagersync.com/">싱크딥</a></li>
                                     <li><a href="https://unvus.com/">(주)언버스</a></li>
                                 </ul>
                             </li>
