--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="row vertical-align">
 
                     <div class="col-md-6 pr30 mt40 mb40">
-                        <h2><strong>우리는</strong><br><span class="color">고객의 환경 변화 대응 능력을 키워줍니다</span></h2>
+                        <h2><strong>베이직인터내셔널은</strong><br><span class="color">고객의 환경 변화 대응 능력을 키워줍니다</span></h2>
                         <p>비즈니스 환경이 하루가 다르게 변화해 가는 시대에 소프트웨어는 그 중심에 있습니다.</p>
                         <p>빠르게 변화하는 환경에 효율적으로 대응하기 위해 소프트웨어는 항상 변화해야 합니다.</p>
                         <p>우리는 새로운 변화에 효율적으로 대응하기 위한 고객의 능력을 향상 시켜 드립니다.</p>
@@ -176,7 +176,7 @@
                 <div class="row text-center">
                     <div class="col-md-12 text-center pb20">
                         <h2>Sync CMS<br><strong>서비스 구축의 높은 생산성</strong></h2>
-                        <p class="lead">체계화된 <span class="color">콘텐츠 관리</span>를 통해서<br>빠르게 서비스를 구축하고 도와줍니다</p>
+                        <p class="lead">베이직인터내셔널의 축적된 노하우와 체계화된 <span class="color">콘텐츠 관리</span>를 통해서<br>빠르게 서비스를 구축하고 도와줍니다</p>
                     </div>
 
                     <div class="col-sm-6 feature-left">
@@ -324,7 +324,7 @@
                 <div class="row text-center">
 
                     <div class="col-md-12 text-center pb20">
-                        <h2>우리가 한 일들을<br><strong>둘러보세요</strong></h2>
+                        <h2>베이직인터내셔널이 걸어온길을<br><strong>둘러보세요</strong></h2>
                         <p class="lead">Wide range of <span class="color">successful</span> digital and print projects.</p>
                     </div>
 
