--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                         </div>
 
                         <div>
-                            <h1>Sync Plat<br><strong>마이크로서비스 플랫폼</strong>(2021년 07월)</h1>
+                            <h1>Sync Plat(2017.07)<br><strong>마이크로서비스 플랫폼</strong>(2021년 07월)</h1>
                             <p class="lead">변화하는 비즈니스 환경 변화에 빠르게 대응하기 위한 마이크로서비스 플랫폼</p>
                             <a href="#syncplat" class="btn btn-lg btn-primary btn-scroll">Sync Plat</a>
                         </div>
 
                         <div>
-                            <h1>Sync Infra<br><strong>클라우드 인프라 자동화</strong>(2021년 10월)</h1>
+                            <h1>Sync Infra(2021.12)<br><strong>클라우드 인프라 자동화</strong>(2021년 10월)</h1>
                             <p class="lead">복잡한 인프라 구성을 자동화함으로서 서비스의 확장을 용이하게 하는 인프라 자동화</p>
                             <a href="#syncinfra" class="btn btn-lg btn-primary btn-scroll">Sync Infra</a>
                         </div>
