--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="title" content="베이직인터내셔널" />
         <meta name="description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다." />
-        <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncPlat,생산성,개발,자바" />
+        <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncBoot,생산성,개발,자바" />
         <meta name="naver-site-verification" content="d619c27c3687c9e108733dbee1336c36b87cfbd0" />
         <meta property="og:type" content="website"> 
         <meta property="og:title" content="베이직인터내셔널 홈페이지">
@@ -60,7 +60,7 @@
                                 <a class="dropdown-toggle">하는일<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#synccms">Sync CMS</a></li>
-                                    <li><a href="#syncplat">Sync Plat</a></li>
+                                    <li><a href="#syncboot">Sync Boot</a></li>
                                     <li><a href="#syncinfra">Sync Infra</a></li>
                                 </ul>
                             </li>
@@ -107,9 +107,9 @@
                         </div>
 
                         <div>
-                            <h1>Sync Plat<br><strong>마이크로서비스 플랫폼</strong></h1>
+                            <h1>Sync Boot<br><strong>마이크로서비스 플랫폼</strong></h1>
                             <p class="lead">변화하는 비즈니스 환경 변화에 빠르게 대응하기 위한 마이크로서비스 플랫폼</p>
-                            <a href="#syncplat" class="btn btn-lg btn-primary btn-scroll">Sync Plat</a>
+                            <a href="#syncboot" class="btn btn-lg btn-primary btn-scroll">Sync Boot</a>
                         </div>
 
                         <div>
@@ -219,13 +219,13 @@
         <!-- End SyncCMS -->
 
 
-        <!-- SyncPlat -->
-        <section id="syncplat" class="pt100 pb90">
+        <!-- SyncBoot -->
+        <section id="syncboot" class="pt100 pb90">
             <div class="container">
                 <div class="row text-center">
 
                     <div class="col-md-12 text-center pb20">
-                        <h2>Sync Plat<br><strong>마이크로서비스</strong>(준비중)</h2>
+                        <h2>Sync Boot<br><strong>마이크로서비스</strong></h2>
                         <p class="lead">애플리케이션의 확장을 용이하게 하고 개발 속도를 앞당겨 <span class="color">혁신을 실현</span>하고<br> 새로운 기능의 출시 시간을 단축합니다.</p>
                     </div>
 
@@ -261,11 +261,11 @@
                             <p>코드 생성기, 예외처리, 통합로그 등 시스템및 개발 업무의 필수요소 기본 제공</p>
                         </div>
                     </div>
-                    <a href="syncplat.html" class="btn btn-md btn-light btn-appear mt30"><span>자세히<i class="ion-arrow-right-c"></i></span></a>
+                    <a href="syncboot.html" class="btn btn-md btn-light btn-appear mt30"><span>자세히<i class="ion-arrow-right-c"></i></span></a>
                 </div>
             </div>
         </section>
-        <!-- End SyncPlat -->
+        <!-- End SyncBoot -->
 
 
         <!-- SyncInfra -->
@@ -273,7 +273,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-12 text-center pb20">
-                        <h2>Sync Infra<br><strong>인프라 자동화</strong>(준비중)</h2>
+                        <h2>Sync Infra<br><strong>인프라 자동화</strong></h2>
                         <p class="lead">자동화를 통해  <span class="color">프로세스 속도를 높이고</span> 스케일업은 물론<br>지속적 통합 업무 시스템 구축</p>
 
                     </div>
