--- a/recurit.html
+++ b/recurit.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="베이직인터내셔널" />
     <meta name="description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다." />
-    <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncPlat,생산성,개발,자바,채용" />
+    <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncBoot,생산성,개발,자바,채용" />
     <meta property="og:type" content="website"> 
     <meta property="og:title" content="베이직인터내셔널 홈페이지">
     <meta property="og:description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다.">
@@ -57,7 +57,7 @@
                         <a class="dropdown-toggle">하는일<i class="ion-ios-arrow-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="index.html#synccms">Sync CMS</a></li>
-                            <li><a href="index.html#syncplat">Sync Plat</a></li>
+                            <li><a href="index.html#syncboot">Sync Boot</a></li>
                             <li><a href="index.html#syncinfra">Sync Infra</a></li>
                         </ul>
                     </li>
