--- a/syncinfra.html
+++ b/syncinfra.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="title" content="베이직인터내셔널" />
         <meta name="description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다." />
-        <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncPlat,생산성,개발,자바,채용" />
+        <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncBoot,생산성,개발,자바,채용" />
         <meta property="og:type" content="website"> 
         <meta property="og:title" content="베이직인터내셔널 홈페이지">
         <meta property="og:description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다.">
@@ -56,7 +56,7 @@
                                 <a class="dropdown-toggle">하는일<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="index.html#synccms">Sync CMS</a></li>
-                                    <li><a href="index.html#syncplat">Sync Plat</a></li>
+                                    <li><a href="index.html#syncboot">Sync Boot</a></li>
                                     <li><a href="index.html#syncinfra">Sync Infra</a></li>
                                 </ul>
                             </li>
@@ -86,7 +86,7 @@
                 <div class="row">
 
                     <div class="col-md-12 text-center">
-                        <h1>Sync <strong>Infra</strong><br>준비중</h1>
+                        <h1>Sync <strong>Infra</strong></h1>
                         <p class="lead">복잡한 인프라 구성을 자동화함으로써 서비스의 확장을 용이하게 하는<br> 인프라 자동화</p>
                     </div>
 
@@ -96,55 +96,55 @@
                         <div class="vossen-portfolio lightbox">
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/syncplat/1.jpg">
+                                <a href="img/portfolio/syncboot/1.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/syncplat/1.jpg" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/1.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/syncplat/2.jpg">
+                                <a href="img/portfolio/syncboot/2.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/syncplat/2.jpg" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/2.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/syncplat/3.jpg">
+                                <a href="img/portfolio/syncboot/3.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/syncplat/3.jpg" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/3.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/syncplat/4.jpg">
+                                <a href="img/portfolio/syncboot/4.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/syncplat/4.jpg" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/4.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/syncplat/5.jpg">
+                                <a href="img/portfolio/syncboot/5.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/syncplat/5.jpg" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/5.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/syncplat/6.jpg">
+                                <a href="img/portfolio/syncboot/6.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/syncplat/6.jpg" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/6.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
@@ -171,7 +171,7 @@
 
         <section class="project-nav">
             <a href="synccms.html"><h5><strong>Sync CMS</strong></h5></a>
-            <a href="syncplat.html"><h5><strong>Sync Plat</strong></h5></a>
+            <a href="syncboot.html"><h5><strong>Sync Boot</strong></h5></a>
             <a href="syncinfra.html"><h5><strong>Sync Infra</strong></h5></a>
         </section>
 
