시스템 유지보수 추가

--- a/maintenance.html
+++ b/maintenance.html
@@ -2,15 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>베이직인터내셔널 - SyncCMS 소개</title>
+        <title>싱크딥 - SyncInfra</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="title" content="베이직인터내셔널" />
+        <meta name="title" content="싱크딥" />
         <meta name="description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다." />
-        <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncBoot,생산성,개발,자바,채용" />
+        <meta name="keywords" content="SyncInfra,마이크로서비스,변화,그로스해킹,자바,개발" />
         <meta property="og:type" content="website"> 
-        <meta property="og:title" content="베이직인터내셔널 홈페이지">
+        <meta property="og:title" content="싱크딥 홈페이지">
         <meta property="og:description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다.">
-        <meta property="og:image" content="https://basicit.co.kr/img/assets/favicon.png">
+        <meta property="og:image" content="https://www.eagersync.com/img/assets/favicon.png">
+        <meta property="og:url" content="https://www.eagersync.com">
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
         <link href="css/ion-icons.min.css" rel="stylesheet" type="text/css">
@@ -19,14 +20,14 @@
         <link href="css/custom.css" rel="stylesheet" type="text/css">
         <link href="css/colors/purple.css" rel="stylesheet" type="text/css">
         <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX18ZRLS4E"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZE8N8BZRN4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-DX18ZRLS4E');
+  gtag('config', 'G-ZE8N8BZRN4');
 </script>
     </head>
     <body data-fade-in="true">
@@ -61,15 +62,14 @@
                                     <li><a href="maintenance.html.html">시스템 유지보수</a></li>
                                 </ul>
                             </li>
-                            <!--<li><a href="index.html#works">했던일</a></li>-->
+                            <!-- <li><a href="index.html#works">했던일</a></li> -->
                             <li><a href="index.html#contact">업무제휴</a></li>
-                            <!-- <li><a href="#contact-info">업무제휴</a></li> -->
                             <li><a href="recurit.html">채용</a></li>
                             <li class="nav-separator"></li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle">협력업체<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu" style="left: -100px;">
-                                    <li><a href="https://www.eagersync.com/">싱크딥</a></li>
+                                    <li><a href="https://basicit.co.kr/">(주)베이직인터내셔널</a></li>
                                     <li><a href="https://unvus.com/">(주)언버스</a></li>
                                 </ul>
                             </li>
@@ -87,8 +87,8 @@
                 <div class="row">
 
                     <div class="col-md-12 text-center">
-                        <h1>Sync <strong>CMS</strong> </h1>
-                        <p class="lead">돋보이는 확장성을 바탕으로 서비스 개발의 생산성을 높여주는 <br> Content 관리 시스템</p>
+                        <h1>시스템 유지보수</h1>
+                        <p class="lead">체계적인 시스템 운영 시스템을 구축하고 있습니다</p>
                     </div>
 
                     <div class="col-md-8 vossen-gallery" data-gap="10"><!-- Values: 10, 15, 20, 25, 30 and 35 -->
@@ -97,58 +97,59 @@
                         <div class="vossen-portfolio lightbox">
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/synccms/extend.png">
+                                <a href="img/portfolio/syncboot/1.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/synccms/extend.png" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/1.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/synccms/main.png">
+                                <a href="img/portfolio/syncboot/2.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/synccms/main.png" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/2.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/synccms/dev.png">
+                                <a href="img/portfolio/syncboot/3.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/synccms/dev.png" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/3.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/synccms/category.png">
+                                <a href="img/portfolio/syncboot/4.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/synccms/category.png" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/4.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/synccms/content.png">
+                                <a href="img/portfolio/syncboot/5.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/synccms/content.png" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/5.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
 
                             <div class="col-sm-6">
-                                <a href="img/portfolio/synccms/permission.png">
+                                <a href="img/portfolio/syncboot/6.jpg">
                                     <div class="portfolio-item">
                                         <div class="item-caption"><i class="ion-android-search size-2x"></i></div>
-                                        <div class="item-image"><img alt="#" src="img/portfolio/synccms/permission.png" /></div>
+                                        <div class="item-image"><img alt="#" src="img/portfolio/syncboot/6.jpg" /></div>
                                     </div>
                                 </a>
                             </div>
+
 
                         </div>
 
@@ -158,10 +159,13 @@
                     <div class="col-md-4 project-sidebar">
 
                         <div>
-                            <h4><strong>제품 정보</strong></h4>
-                            <p>확장 가능한 콘텐츠의 모델과 단순 카테고리 관리가 아닌 확장 가능한 분류 관리를 통한 효율적인 서비스 개발을 가능하게 합니다</p>
+                            <h4><strong>서비스 정보</strong></h4>
+                            <p>다양한 클라우드 환경에 대한 풍부한 개발/운영 경험을 가지고 있습니다</p>
+                            <p>에자일 기반에 효율적인 운영 시스템을 구축하고 있습니다</p>
+                            <p>다양한 환경애서 자동화된 테스트/통합/뱌포를 위한 시스템 구성 경험이 있습니다</p>
+                            <p>Jira/Gitlab/Github/JetbrainSoace와 같은 다양한 이슈관리 시스템에서 운영 프로세스를 설계하고 운영한 경험을 가지고 있습니다</p>
+                            <p>MSA/DevOps 환경에 대한 경험과 솔루션을 보유하고 있습니다</p>
                         </div>
-
                     </div>
                     <!-- End Sidebar -->
 
@@ -178,7 +182,7 @@
 
         <!-- Start Footer -->
         <footer id="footer" class="footer style-1 dark">
-            <strong>©베이직인터내셔널 2021</strong>
+            <strong>©SyncDeep 2021</strong>
             <p>살아 있는 소프트웨어를 만듭니다.</p>
 
             <!-- Back To Top Button -->
