--- a/syncinfra.html
+++ b/syncinfra.html
@@ -58,6 +58,7 @@
                                     <li><a href="index.html#synccms">Sync CMS</a></li>
                                     <li><a href="index.html#syncboot">Sync Boot</a></li>
                                     <li><a href="index.html#syncinfra">Sync Infra</a></li>
+                                    <li><a href="maintenance.html.html">시스템 유지보수</a></li>
                                 </ul>
                             </li>
                             <!--<li><a href="index.html#works">했던일</a></li>-->
