시스템 유지보수 오타 수정

--- a/maintenance.html
+++ b/maintenance.html
@@ -162,7 +162,7 @@
                             <h4><strong>서비스 정보</strong></h4>
                             <p>다양한 클라우드 환경에 대한 풍부한 개발/운영 경험을 가지고 있습니다</p>
                             <p>에자일 기반에 효율적인 운영 시스템을 구축하고 있습니다</p>
-                            <p>다양한 환경애서 자동화된 테스트/통합/뱌포를 위한 시스템 구성 경험이 있습니다</p>
+                            <p>다양한 환경애서 자동화된 테스트/통합/배포를 위한 시스템 구성 경험이 있습니다</p>
                             <p>Jira/Gitlab/Github/JetbrainSoace와 같은 다양한 이슈관리 시스템에서 운영 프로세스를 설계하고 운영한 경험을 가지고 있습니다</p>
                             <p>MSA/DevOps 환경에 대한 경험과 솔루션을 보유하고 있습니다</p>
                         </div>
