--- a/lecs/index.html
+++ b/lecs/index.html
@@ -6,8 +6,15 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>CkEditor5 샘플</title>
+		<title>베이직인터네셔널 LECS Ckeditor5 예제</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="https://basicit.co.kr/img/assets/favicon.png">
+		<link rel="stylesheet" type="text/css" href="./common.css">
+		<style>
+			table {
+				width: 850px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -29,32 +36,32 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 					<tr>
 						<td>1</td>
 						<td>텍스트+표(atrc)</td>
-						<td><a href="./mujikorea_001.html">텍스트+표(atrc)</a></td>
-						<td>https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31154733</td>
+						<td><a href="./mujikorea_001.html" target='_blank'>텍스트+표(atrc)</a></td>
+						<td><a href="https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31154733" target='_blank'>원본</a></td>
 					</tr>
 					<tr>
 						<td>2</td>
 						<td>텍스트+동영상+이미지</td>
-						<td><a href="./mujikorea_002.html">텍스트+동영상+이미지</a></td>
-						<td>https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31154733</td>
+						<td><a href="./mujikorea_002.html" target='_blank'>텍스트+동영상+이미지</a></td>
+						<td><a href="https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31126999" target='_blank'>원본</a></td>
 					</tr>
 					<tr>
 						<td>3</td>
 						<td>PDF 다운받기</td>
-						<td><a href="./mujikorea_003.html">PDF 다운받기</a></td>
-						<td>https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31000037</td>
+						<td><a href="./mujikorea_003.html" target='_blank'>PDF 다운받기</a></td>
+						<td><a href="https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31000037" target='_blank'>원본</a></td>
 					</tr>
 					<tr>
 						<td>4</td>
 						<td>이미지 가로폭 작음</td>
-						<td><a href="./mujikorea_004.html">이미지 가로폭 작음</a></td>
-						<td>https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31145126</td>
+						<td><a href="./mujikorea_004.html" target='_blank'>이미지 가로폭 작음</a></td>
+						<td><a href="https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31145126" target='_blank'>원본</a></td>
 					</tr>
 					<tr>
 						<td>5</td>
 						<td>작은이미지(센터정렬 태그)</td>
-						<td><a href="./mujikorea_005.html">작은이미지(센터정렬 태그)</a></td>
-						<td>https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31150556</td>
+						<td><a href="./mujikorea_005.html" target='_blank'>작은이미지(센터정렬 태그)</a></td>
+						<td><a href="https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31150556" target='_blank'>원본</a></td>
 					</tr>
 				</tbody>
 
@@ -75,20 +82,20 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 				<tr>
 					<td>1</td>
 					<td>이미지</td>
-					<td><a href="./lottechilsung_001.html">이미지</a></td>
-					<td>https://mall.lottechilsung.co.kr/display/showDisplay.lecs?goodsNo=CF31147137</td>
+					<td><a href="./lottechilsung_001.html" target='_blank'>이미지</a></td>
+					<td><a href="https://mall.lottechilsung.co.kr/display/showDisplay.lecs?goodsNo=CF31147137" target='_blank'>원본</a></td>
 				</tr>
 				<tr>
 					<td>2</td>
 					<td>동영상</td>
-					<td><a href="./lottechilsung_002.html">동영상</a></td>
-					<td>https://mall.lottechilsung.co.kr/display/showDisplay.lecs?goodsNo=CF31132233</td>
+					<td><a href="./lottechilsung_002.html" target='_blank'>동영상</a></td>
+					<td><a href="https://mall.lottechilsung.co.kr/display/showDisplay.lecs?goodsNo=CF31132233" target='_blank'>원본</a></td>
 				</tr>
 				<tr>
 					<td>3</td>
 					<td>링크&동영상</td>
-					<td><a href="./lottechilsung_003.html">링크&동영상</a></td>
-					<td>https://mall.lottechilsung.co.kr/display/showDisplay.lecs?goodsNo=CF31154836&displayNo=CF1A01A09</td>
+					<td><a href="./lottechilsung_003.html" target='_blank'>링크&동영상</a></td>
+					<td><a href="https://mall.lottechilsung.co.kr/display/showDisplay.lecs?goodsNo=CF31154836&displayNo=CF1A01A09" target='_blank'>원본</a></td>
 				</tr>
 				</tbody>
 
