--- a/lecs/lottechilsung_002.html
+++ b/lecs/lottechilsung_002.html
@@ -6,8 +6,10 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>CkEditor5 샘플</title>
+		<title>베이직인터네셔널 LECS Ckeditor5 예제</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="https://basicit.co.kr/img/assets/favicon.png">
+		<link rel="stylesheet" type="text/css" href="./common.css">
 
 		<!-- common style -->
 		<link rel="stylesheet" href="https://mall.lottechilsung.co.kr/css/base.css?ver=20201101">
@@ -20,7 +22,7 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 		<script>
 			$(document).ready(function(){
 				$.get('./lottechilsung_002_content.html', function(data) {
-					$('#cke5-user-interface-classic-demo').html(data);
+					$('#concentrix-lecs-ckeditor').html(data);
 					initializeCkeditor();
 				});
 
@@ -37,10 +39,10 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 
 	<body>
 		<div class="header-wrapper">
-			<h1>칠성 2. 동영상 - https://mall.lottechilsung.co.kr/display/showDisplay.lecs?goodsNo=CF31132233</h1>
+			<h1><a href="https://mall.lottechilsung.co.kr/display/showDisplay.lecs?goodsNo=CF31132233" target='_blank'>칠성 2. 동영상</a></h1>
 		</div>
 		<div class="editor-wrapper">
-			<div id="cke5-user-interface-classic-demo">
+			<div id="concentrix-lecs-ckeditor">
 				<div class="user_con mgb30">
 				<h5>제품 정보</h5>
 				<dl>
