--- a/lecs/mujikorea_004.html
+++ b/lecs/mujikorea_004.html
@@ -6,8 +6,10 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>CkEditor5 샘플</title>
+		<title>베이직인터네셔널 LECS Ckeditor5 예제</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="https://basicit.co.kr/img/assets/favicon.png">
+		<link rel="stylesheet" type="text/css" href="./common.css">
 
 		<link rel="stylesheet" type="text/css" href="https://www.mujikorea.net/css/muji.css?ver=20230915" />
 		<link rel="stylesheet" type="text/css" href="https://www.mujikorea.net/css/store/store.css?ver=20231024" />
@@ -29,10 +31,10 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 
 	<body>
 		<div class="header-wrapper">
-			<h1>무지 4. 이미지 가로폭 작음 - https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31145126</h1>
+			<h1><a href="https://www.mujikorea.net/display/showDisplay.lecs?goodsNo=MJ31145126" target='_blank'>무지 4. 이미지 가로폭 작음</a></h1>
 		</div>
 		<div class="editor-wrapper">
-			<div id="cke5-user-interface-classic-demo">
+			<div id="concentrix-lecs-ckeditor">
 				<div class="user_con mgb30">
 					<h5>제품 정보</h5>
 
