--- a/index.html
+++ b/index.html
@@ -128,15 +128,16 @@
 
 
         <!-- About US -->
-        <section id="about" class="parallax pt40 pb40" data-overlay-dark="8">
+        <section id="about" class="parallax pt40 pb40" data-overlay-dark="9">
             <div class="background-image">
                 <img src="img/backgrounds/bg-2.jpg" alt="#">
             </div>
             <div class="container">
                 <div class="row vertical-align">
 
-                    <div class="col-md-6 pr30 mt40 mb40">
-                        <h2><strong>베이직인터내셔널은</strong><br><span class="color">고객의 환경 변화 대응 능력을 키워줍니다</span></h2>
+                    <div class="col-md-6 pr30 mt40 mb40 aticle_txt">
+                        <h2><strong>베이직인터내셔널은</strong><br><span class="color"
+                            style="">고객의 환경 변화 대응 능력을 키워줍니다</span></h2>
                         <p>비즈니스 환경이 하루가 다르게 변화해 가는 시대에 소프트웨어는 그 중심에 있습니다.</p>
                         <p>빠르게 변화하는 환경에 효율적으로 대응하기 위해 소프트웨어는 항상 변화해야 합니다.</p>
                         <p>우리는 새로운 변화에 효율적으로 대응하기 위한 고객의 능력을 향상 시켜 드립니다.</p>
@@ -175,7 +176,7 @@
         <section id="synccms" class="pt100 pb90">
             <div class="container">
                 <div class="row text-center">
-                    <div class="col-md-12 text-center pb20">
+                    <div class="col-md-12 text-center pb20 aticle_txt">
                         <h2>Sync CMS<br><strong>서비스 구축의 높은 생산성</strong></h2>
                         <p class="lead">베이직인터내셔널의 축적된 노하우와 체계화된 <span class="color">콘텐츠 관리</span>를 통해서<br>빠르게 서비스를 구축하고 도와줍니다</p>
                     </div>
@@ -225,7 +226,7 @@
             <div class="container">
                 <div class="row text-center">
 
-                    <div class="col-md-12 text-center pb20">
+                    <div class="col-md-12 text-center pb20 aticle_txt">
                         <h2>Sync Boot<br><strong>마이크로서비스</strong></h2>
                         <p class="lead">애플리케이션의 확장을 용이하게 하고 개발 속도를 앞당겨 <span class="color">혁신을 실현</span>하고<br> 새로운 기능의 출시 시간을 단축합니다.</p>
                     </div>
@@ -273,7 +274,7 @@
         <section id="syncinfra" class="pt100 pb90">
             <div class="container">
                 <div class="row text-center">
-                    <div class="col-md-12 text-center pb20">
+                    <div class="col-md-12 text-center pb20 aticle_txt">
                         <h2>Sync Infra<br><strong>인프라 자동화</strong></h2>
                         <p class="lead">자동화를 통해  <span class="color">프로세스 속도를 높이고</span> 스케일업은 물론<br>지속적 통합 업무 시스템 구축</p>
 
@@ -504,7 +505,7 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col-md-12 text-center pb20">
+                    <div class="col-md-12 text-center pb20 aticle_txt">
                         <h2>소개자료 요청<br><strong>연락처를 남겨주세요</strong></h2>
                         <p class="lead">빠른시일안에 <span class="color">연락</span> 드리겠습니다</p>
                     </div>
