--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
         <!-- Map -->
         <section class="vossen-map">
             <!-- Paste your map iframe here -->
-            <iframe width="800" height="550" id="gmap_canvas" src="https://maps.google.com/maps?q=%EC%97%90%EC%9D%B4%EC%8A%A4%EB%B9%84%EC%A6%88%ED%8F%AC%EB%A0%88%EC%A7%80%EC%8B%9D%EC%82%B0%EC%97%85%EC%84%BC%ED%83%80&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.139026125948!2d126.88373510293785!3d37.48066449292935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9f5f1d779fdd%3A0xbf1c6873449e21a!2z67Kg7J207KeB7J247YSw64K07IWU64SQ!5e1!3m2!1sko!2sus!4v1708342504614!5m2!1sko!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <!-- End Map -->
 
