--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                         </div>
                         <div class="col-lg-12">
                             <h3>basicit.sync@<span class="color">gmail.com</span></h3>
-                            <h4>가산디지털단지 <span class="color">에이스비즈포레</span></h4>
+                            <h4>가산디지털단지 <span class="color">KS 타워</span></h4>
                         </div>
                     </div>
 
