--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                             <h1 class="bold">02-3489-1115</h1>
                         </div>
                         <div class="col-lg-12">
-                            <h3>basicit.sync@<span class="color">gmail.com</span></h3>
+                            <h3>sisocore@<span class="color">gmail.com</span></h3>
                             <h4>가산디지털단지 <span class="color">KS 타워</span></h4>
                         </div>
                     </div>
