--- a/maintenance.html
+++ b/maintenance.html
@@ -4,14 +4,14 @@
         <meta charset="utf-8">
         <title>베이직인터내셔널 - 시스템 유지보수</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="title" content="싱크딥" />
+        <meta name="title" content="엠파시" />
         <meta name="description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다." />
         <meta name="keywords" content="SyncInfra,마이크로서비스,변화,그로스해킹,자바,개발" />
-        <meta property="og:type" content="website"> 
-        <meta property="og:title" content="싱크딥 홈페이지">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="엠파시 홈페이지">
         <meta property="og:description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다.">
-        <meta property="og:image" content="https://www.eagersync.com/img/assets/favicon.png">
-        <meta property="og:url" content="https://www.eagersync.com">
+        <meta property="og:image" content="https://www.empasy.com/img/assets/favicon.png">
+        <meta property="og:url" content="https://www.empasy.com">
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
         <link href="css/ion-icons.min.css" rel="stylesheet" type="text/css">
@@ -182,7 +182,7 @@
 
         <!-- Start Footer -->
         <footer id="footer" class="footer style-1 dark">
-            <strong>©SyncDeep 2021</strong>
+            <strong>©베이직인터내셔널 2024</strong>
             <p>살아 있는 소프트웨어를 만듭니다.</p>
 
             <!-- Back To Top Button -->
