--- a/synccms.html
+++ b/synccms.html
@@ -7,7 +7,7 @@
         <meta name="title" content="베이직인터내셔널" />
         <meta name="description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다." />
         <meta name="keywords" content="클라우드,마이크로서비스,인프라,CMS,SyncCMS,SyncInfra,SyncBoot,생산성,개발,자바,채용" />
-        <meta property="og:type" content="website"> 
+        <meta property="og:type" content="website">
         <meta property="og:title" content="베이직인터내셔널 홈페이지">
         <meta property="og:description" content="CMS와 마이크로서비스, 클라우드를 주로 하는 SI 업체입니다.">
         <meta property="og:image" content="https://basicit.co.kr/img/assets/favicon.png">
@@ -69,7 +69,7 @@
                             <li class="dropdown">
                                 <a class="dropdown-toggle">협력업체<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu" style="left: -100px;">
-                                    <li><a href="https://www.eagersync.com/">싱크딥</a></li>
+                                    <li><a href="https://www.empasy.com/">엠파시</a></li>
                                     <li><a href="https://unvus.com/">(주)언버스</a></li>
                                 </ul>
                             </li>
