--- a/synccms.html
+++ b/synccms.html
@@ -20,14 +20,14 @@
         <link href="css/colors/purple.css" rel="stylesheet" type="text/css">
         <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX18ZRLS4E"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1ZTEDP93ZM"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-  gtag('config', 'G-DX18ZRLS4E');
-</script>
+            gtag('config', 'G-1ZTEDP93ZM');
+        </script>
     </head>
     <body data-fade-in="true">
 
